--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Blog</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="../blog-klinek/css/index.css">
+        <link rel="stylesheet" href="css/index.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -33,7 +33,7 @@
                         <a class="btn btn-dark" href="#kenapa">Next Scroll</a>
                     </div>
                     <div class="col">
-                        <img class="mt-5 pt-5" src="../blog-klinek/image/doket-removebg-preview.png" alt="">
+                        <img class="mt-5 pt-5" src="image/doket-removebg-preview.png" alt="">
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img class="fs-1" src="../blog-klinek/image/mikir-removebg-preview.png" alt="">
+                        <img class="fs-1" src="image/mikir-removebg-preview.png" alt="">
                     </div>
                     <div class="col mt-5 pt-5 fs-5">
                         <h4>“Penting banget emang?”
@@ -74,15 +74,15 @@
                 <div class="row justify-content-center mt-3">
                     <div class="col-5">
                         <figure class="figure shadow">
-                            <img src="../blog-klinek/image/sunser.jpeg" class="figure-img img-fluid rounded" alt="...">
+                            <img src="image/sunser.jpeg" class="figure-img img-fluid rounded" alt="...">
                     </div>
                     <div class="col-5">
                         <figure class="figure shadow">
-                            <img src="../blog-klinek/image/sunserr.jpeg" class="figure-img img-fluid rounded" alt="...">
+                            <img src="image/sunserr.jpeg" class="figure-img img-fluid rounded" alt="...">
                     </div>
                     <div class="col-5">
                         <figure class="figure shadow">
-                            <img src="../blog-klinek/image/sunserrr.jpeg" class="figure-img img-fluid rounded" alt="...">
+                            <img src="image/sunserrr.jpeg" class="figure-img img-fluid rounded" alt="...">
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
             <div class="row justify-content-center">
                 <div class="col-6 mt-4">
                     <figure class="figure shadow">
-                        <img src="../blog-klinek/image/sunserrr.jpeg" class="figure-img img-fluid rounded" alt="...">
+                        <img src="image/sunserrr.jpeg" class="figure-img img-fluid rounded" alt="...">
                 </div>
             </div>
           </div>
