--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
           <div class="home">
             <div class="container">
                 <div class="row mt-5">
-                    <div class="col mt-5 pt-5">
+                    <div class="col-md-5 mt-5 pt-5">
                         <h1 class="border-bottom" style="font-size: 70px
                         ; font-weight: bold;" >Sunscreen</h1>
                         <p class="fs-5 text-muted" >Mau tau manfaat dari Sunscreen ? , ingin tahu cara pemakaiannya ? , ingin tahu kenapa kita harus perlu sunscreeen , yuk langsung aja kita pelajari tentang Sunscreen </p>
                         <a class="btn btn-dark" href="#kenapa">Next Scroll</a>
                     </div>
-                    <div class="col">
+                    <div class="col-md-5">
                         <img class="mt-5 pt-5" src="image/doket-removebg-preview.png" alt="">
                     </div>
                 </div>
@@ -46,10 +46,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-5">
                         <img class="fs-1" src="image/mikir-removebg-preview.png" alt="">
                     </div>
-                    <div class="col mt-5 pt-5 fs-5">
+                    <div class="col-md-5 mt-5 pt-5 fs-5">
                         <h4>“Penting banget emang?”
                             “Pake sunscreen tuh gaenak”
                             “Emang manfaatnya apa sii?</h4>
@@ -72,15 +72,15 @@
                     </div>
                 </div>
                 <div class="row justify-content-center mt-3">
-                    <div class="col-5">
+                    <div class="col-md-5">
                         <figure class="figure shadow">
                             <img src="image/sunser.jpeg" class="figure-img img-fluid rounded" alt="...">
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-5">
                         <figure class="figure shadow">
                             <img src="image/sunserr.jpeg" class="figure-img img-fluid rounded" alt="...">
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-5">
                         <figure class="figure shadow">
                             <img src="image/sunserrr.jpeg" class="figure-img img-fluid rounded" alt="...">
                     </div>
@@ -104,6 +104,11 @@
                     <h4 class="text-center">
                         itulah alasan dan tips kenapa kulit kita perlu sunscreen. So, rajin rajin pakai sunscreen ya guys biar nanti pas tua tetep flawles and glowing
                     </h4>  
+                </div>
+            </div>
+            <div class="row border-top">
+                <div class="col mb-5">
+                    <p class="text-center text-light pt-3">Nama Penulis : Shelani Krisdayana Safitri</p>
                 </div>
             </div>
           </div>
